# StockAnalyzer

./: .dockerignore  .env.example  .gitignore  Deploy_Guide_v1.6.md  Dockerfile  E_Prime_审核方案_v1.3.7.md  FN_NAS_更新部署手册.md  Makefile  NAS_迁移与首轮上线清单_v1.0.md  News_M7_AI_Rollout_Plan_v1.0.md  README.md  Self_Learning_Optimization_Priorities_v1.0.md  StockAnalyzer_系统改造实施方案_v1.3.md  V2.0_闲时利用全景规划.md  V3.2_闲时任务可执行规格表.md  WeChat_Push_Spec_v1.2.md  docker-compose.advisory.yml  docker-compose.firstscan.yml  docker-compose.notifications.local.yml  docker-compose.runtime.localvol.yml  docker-compose.runtime.yml  docker-compose.yml  implementation_plan.md  offhours_evolution_plan_v1.6.md  pyproject.toml  temp_line.txt  test_akshare.py  tmp_dashboard.html  tmp_dashboard.js  tmp_dashboard_checked.js  tmp_dashboard_live.html  tmp_week5_fullscan_request.json  update_dash.py  修复方案_stock不推送和自主学习.md  修复方案_stock不推送和自主学习_修订版.md  升级改造方案_评审三次修订版.md
.claude/: settings.local.json
artifacts/: model_v1.json
config/: default.yaml  evolution.production.example.yaml  llm.local.template.yaml  llm.local.yaml
docs/: active_recommendation_learning_upgrade_plan_v1.md  codex_spec_v3_1_ready_for_opus.md  codex_spec_v3_ready_for_opus.md  evolution_batch2_entry.md  evolution_production_hardening.md  fn_nas_deployment_runtime_localvol.md  nas_full_remediation_runbook.md  nas_support_bundle.md  p0_integrated_nas_validation_handoff.md  p1_shadow_calibration_nas_handoff.md  phase_d_extension_backlog.md  pre_release_checklist.md  quality_gate_playbook.md  rollback_checklist.md  signal_tuning_v1_v2_20260320.md  v13_deployment_guide.md  v13_runtime_operations.md  v13_training_and_acceptance.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  (+1 more)
(+571 files in other folders)
